--- a/frontend/job-detail.html
+++ b/frontend/job-detail.html
@@ -294,7 +294,7 @@
                 // Legacy format
                 content.innerHTML = `
                     <div class="job-header">
-                        <span class="source-badge legacy">Legacy Data</span>
+                        <span class="source-badge legacy">Kaggle Data</span>
                         <h1 class="job-title">${escapeHtml(job["Tiêu đề tin"])}</h1>
                         <div class="job-tags">
                             <span class="job-tag">📍 ${escapeHtml(job["Tỉnh thành tuyển dụng"] || job["Địa điểm tuyển dụng"] || 'N/A')}</span>
