dùng gitbash thay vì powershell

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -651,7 +651,7 @@
     </div>
 
     <script>
-        const API_URL = "http://localhost:3000";
+        const API_URL = "https://bunny-orbit-scanned-cost.trycloudflare.com";
         let charts = {};
 
         document.addEventListener('DOMContentLoaded', loadAllData);
